# Fault_tolerance_project

./: .env.example  .gitignore  APPLICATION_DOCUMENTATION.md  BUSINESS_CASE.md  CONTRIBUTING.md  GIT_SETUP_INSTRUCTIONS.md  LICENSE  MANUAL_TESTING.md  QUICKSTART.md  QUICK_START.md  README.md  SECURITY.md  azure.sh  docker-compose.yml
.github/workflows/: azure-iot-platform.yml
alert_worker/: CMakeLists.txt  Dockerfile  main.cpp
auth_service/: CMakeLists.txt  Dockerfile  main.cpp
frontend/: Dockerfile  app.js  dashboard.html  index.html  package.json  style.css
frontend/public/: index.html
frontend/src/: App.css  App.js
frontend/src/components/: HealthDashboard.js  ProcessingForm.js  ResponseDisplay.js
frontend/tests/: App.test.js  ProcessingForm.test.js
function_node/: Dockerfile  index.js  package.json
function_node/tests/: integration.test.js
infra/azure/: deploy-container-apps.sh  main.bicep
infra/kubernetes/: manifests.yaml
scripts/: run_local.sh  simulate_failure.sh  stop_local.sh
sensor_gateway/: CMakeLists.txt  Dockerfile  main.cpp  sensor_sim.cpp  sensor_sim.h
service_cpp/: CMakeLists.txt  Dockerfile  main.cpp
service_cpp/tests/: test_processing.cpp
shared/: db.cpp  db.h  init.sql  log.cpp  log.h  models.h
tests/: e2e_tests.py  load_test_k6.js  requirements.txt
